RESOLVED FIXED23464
Infinite recursion at SelectionController::setSelection
https://bugs.webkit.org/show_bug.cgi?id=23464
Summary Infinite recursion at SelectionController::setSelection
chris fleizach
Reported 2009-01-21 15:22:13 PST
Setting the selection through AX can cause an infinite recursion at SelectionController::setSelection
Attachments
patch to stop a crasher (1.52 KB, patch)
2009-01-21 15:23 PST, chris fleizach
justin.garcia: review+
chris fleizach
Comment 1 2009-01-21 15:23:29 PST
Created attachment 26909 [details] patch to stop a crasher
Justin Garcia
Comment 2 2009-01-22 12:03:13 PST
Comment on attachment 26909 [details] patch to stop a crasher layout test? r=me
chris fleizach
Comment 3 2009-01-22 12:31:02 PST
Note You need to log in before you can comment on or make changes to this bug.