2009-01-22  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Justin Garcia.

        Bug 23464: Infinite recursion at SelectionController::setSelection
        https://bugs.webkit.org/show_bug.cgi?id=23464

        Check for conditions leading to infinite recursion.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::setSelection):



Canonical link: https://commits.webkit.org/32317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40129 268f45cc-cd09-0410-ab3c-d52691b4dbfc